[gd_scene load_steps=11 format=4 uid="uid://bkvsnruh2qysp"]

[ext_resource type="Script" uid="uid://x4ufvrowtkm3" path="res://Scripts/level_4.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://i728kcang6gs" path="res://Assests/floor tiles.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b133aysgkpmoq" path="res://Scenes/kitdy.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b8db1lp6g44jq" path="res://Scenes/jk.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bwdgtebrwfeh0" path="res://Scenes/hearts_container.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://djhiq8vnwj6ou" path="res://Assests/UI.png" id="6"]
[ext_resource type="PackedScene" uid="uid://bdqsjbep1qklm" path="res://Scenes/pause_menu.tscn" id="7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_go701"]
texture = ExtResource("2")
texture_region_size = Vector2i(174, 174)
0:0/0 = 0
0:0/0/script = null
1:0/0 = 0
1:0/0/script = null
2:0/0 = 0
2:0/0/script = null
3:0/0 = 0
3:0/0/script = null
4:0/0 = 0
4:0/0/script = null
6:0/0 = 0
6:0/0/script = null
7:0/0 = 0
7:0/0/script = null
8:0/0 = 0
8:0/0/script = null
0:1/0 = 0
0:1/0/script = null
1:1/0 = 0
1:1/0/script = null
2:1/0 = 0
2:1/0/script = null
3:1/0 = 0
3:1/0/script = null
4:1/0 = 0
4:1/0/script = null
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -60.5, 87, -56.5, 87, 14.5, -87, 16.5)
9:1/0/script = null
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -58.5, 64.5, -57.5, 66.5, 87, -24.5, 87, -23.6557, 13.5442, -87, 11.5)
10:1/0/script = null
0:2/0 = 0
0:2/0/script = null
1:2/0 = 0
1:2/0/script = null
2:2/0 = 0
2:2/0/script = null
3:2/0 = 0
3:2/0/script = null
4:2/0 = 0
4:2/0/script = null
9:2/0 = 0
9:2/0/script = null
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-22.5, -87, 69.5, -87, 66.5, 87, -24.5, 87)
10:2/0/script = null
6:3/0 = 0
6:3/0/script = null
7:3/0 = 0
7:3/0/script = null
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-49.5, -87, 37.5, -87, 40.5, -12.5, 87, -11.5, 87, 63.5, -48.5, 61.5)
8:3/0/script = null
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -12.5, 87, -11.5, 87, 63.5, -87, 59.5)
9:3/0/script = null
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.5, -87, 66.5, -87, 67.5, 59.5, -87, 64.5, -87, -11.5, -23.5, -12.5)
10:3/0/script = null
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-49.5, -87, 37.5, -87, 38.5, -2.5, 37.5, 87, -40.5, 87)
8:2/0/script = null
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-47.5, -56.5, 87, -56.5, 87, 14.5, 37.5, 15.5, 37.5, 87, -40.5, 87)
8:1/0/script = null
6:1/0 = 0
6:1/0/script = null
7:1/0 = 0
7:1/0/script = null
7:2/0 = 0
7:2/0/script = null
6:2/0 = 0
6:2/0/script = null

[sub_resource type="TileSet" id="TileSet_5a7ea"]
tile_size = Vector2i(174, 174)
physics_layer_0/collision_layer = 1
sources/8 = SubResource("TileSetAtlasSource_go701")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ntyy"]
texture = ExtResource("6")
region_rect = Rect2(1060, 1153, 37, 46)

[node name="level_4" type="Node2D"]
script = ExtResource("1")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-760, 13)
tile_set = SubResource("TileSet_5a7ea")
format = 2
layer_0/tile_data = PackedInt32Array(327688, 65544, 1, 8, 65544, 1, 65541, 589832, 2, 196617, 589832, 536870914, 393220, 589832, 2, -65525, 589832, 536870914, 262155, 589832, 536870914, 458763, 589832, 3, 458762, 589832, 3, 458761, 589832, 3, 196618, 65544, 1, -131073, 524296, 2, 393230, 655368, 2, 393229, 589832, 2, 458766, 655368, 3, 262156, 589832, 536870914, 131085, 589832, 2, 458764, 589832, 3, 458765, 589832, 3, -65529, 65544, 1, -65530, 458760, 2, 4, 65544, 1, 65539, 589832, 2, 131075, 458760, 2, 131074, 589832, 2, 131073, 589832, 2, 196609, 65544, 1, 196608, 458760, 2, 262144, 589832, 2, 327679, 524296, 2, 196610, 65544, 1, 196611, 65544, 1, 131077, 589832, 2, 131078, 589832, 2, 131079, 65544, 1, 65544, 65544, 1, 65545, 589832, 2, 65546, 589832, 2, 65547, 589832, 536870914, 12, 589832, 2, 13, 589832, 2, -131058, 655368, 2, -131059, 589832, 2, -131060, 589832, 536870914, -131061, 589832, 536870914, -65526, 589832, 2, -65527, 65544, 1, -65528, 589832, 2, 7, 65544, 1, 6, 589832, 2, 65538, 589832, 2, 131072, 65544, 1, 196607, 524296, 2, 65537, 458760, 2, -196594, 655368, 2, -196595, 589832, 2, -196596, 589832, 536870914, -196597, 589832, 536870914, -196598, 589832, 2, -196599, 589832, 536870914, -196600, 589832, 536870914, -196601, 589832, 536870914, -196602, 589832, 536870914, -196604, 589832, 536870914, -131069, 65544, 1, -131070, 65544, 1, -131071, 65544, 1, -131072, 589832, 2, -65537, 524296, 2, -196608, 589832, 536870914, -196607, 589832, 536870914, -196606, 589832, 2, -262141, 589832, 1, -262140, 589832, 1, -196609, 524296, 1, -262144, 589832, 1, -262143, 589832, 1, -262142, 589832, 1, -262139, 589832, 1, -196605, 589832, 536870914, 131071, 524296, 2, 0, 589832, 2, 1, 589832, 2, 2, 589832, 2, 3, 458760, 2, -65532, 65544, 1, -131064, 589832, 2, -131063, 589832, 536870914, -131062, 65544, 1, 65536, 458760, 2, 65535, 524296, 2, -65535, 589832, 2, -65534, 589832, 2, -65533, 458760, 2, -131068, 65544, 1, -131066, 589832, 2, -131065, 65544, 1, -262133, 589832, 1, -262132, 589832, 1, -262131, 589832, 1, -262130, 655368, 1, -262134, 589832, 1, -65536, 589832, 2, -1, 524296, 2, -262136, 589832, 1, -262135, 589832, 1, -262137, 589832, 1, -262138, 589832, 1, -65522, 655368, 2, -65523, 589832, 2, -65524, 589832, 536870914, 11, 589832, 536870914, 10, 589832, 2, 9, 589832, 536870914, 65543, 65544, 1, 65542, 589832, 2, 262143, 524296, 2, 393215, 524296, 2, 262145, 589832, 2, 262146, 458760, 2, 262147, 458760, 2, 262148, 458760, 2, 196613, 589832, 2, 196614, 458760, 2, 196615, 65544, 1, 196616, 458760, 2, 131081, 65544, 1, 131082, 589832, 536870914, 131083, 589832, 536870914, 131084, 589832, 536870914, 65549, 589832, 2, 131086, 655368, 2, 196621, 589832, 2, 196620, 65544, 1, 196619, 589832, 536870914, 262154, 589832, 536870914, 262153, 589832, 536870914, 262152, 589832, 2, 327687, 65544, 1, 327686, 65544, 1, 327685, 65544, 1, 327684, 65544, 1, 393219, 589832, 2, 393218, 589832, 2, 393217, 589832, 2, 458752, 589832, 3, 524287, 524296, 3, 458753, 589832, 3, 458754, 589832, 3, 458755, 589832, 3, 458756, 589832, 3, 393221, 589832, 2, 393222, 589832, 2, 393223, 589832, 2, 393224, 589832, 2, 327689, 65544, 1, 327690, 65544, 1, 327691, 65544, 1, 327692, 65544, 1, 262157, 589832, 536870914, 262158, 655368, 2, 327694, 655368, 2, 327693, 65544, 1, 393226, 589832, 2, 393225, 589832, 2, 458758, 589832, 3, 458757, 589832, 3, 458759, 589832, 3, 458760, 589832, 3, 393227, 589832, 2, 393228, 589832, 2, 196622, 655368, 2, 262151, 589832, 2, 262150, 589832, 2, 327683, 65544, 1, 327682, 65544, 1, 393216, 589832, 2, 458751, 524296, 2, 327680, 65544, 1, 327681, 65544, 1, 262149, 589832, 2, 65548, 589832, 2, 131080, 589832, 2, 65550, 655368, 2, 14, 655368, 2, -196603, 589832, 2, -131067, 589832, 2, -65531, 589832, 2, 5, 589832, 2, 65540, 65544, 1, 131076, 65544, 1, 196612, 589832, 2, -196610, 589832, 2, -196611, 589832, 2, -196612, 589832, 2, -196613, 589832, 2, -131077, 589832, 2, -65541, 589832, 2, -5, 589832, 2, 65531, 589832, 2, 131067, 589832, 2, 131068, 589832, 2, 196604, 589832, 2, 262140, 589832, 2, 327676, 589832, 2, 393212, 589832, 2, 458748, 589832, 2, 458749, 589832, 2, 524285, 589832, 2, 524286, 589832, 2, 458750, 589832, 2, 393214, 589832, 2, 327678, 589832, 2, 262142, 589832, 2, 196606, 589832, 2, 131070, 589832, 2, 65534, 589832, 2, -2, 589832, 2, -65538, 589832, 2, -131074, 589832, 2, -131075, 589832, 2, -131076, 589832, 2, -65540, 589832, 2, -65539, 589832, 2, -3, 589832, 2, 65533, 589832, 2, 131069, 589832, 2, 196605, 589832, 2, 262141, 589832, 2, 327677, 589832, 2, 65532, 589832, 2, -4, 589832, 2, 393213, 589832, 2, 524284, 589832, 2, 524283, 589832, 2, 458747, 589832, 2, 393211, 589832, 2, 327675, 589832, 2, 262139, 589832, 2, 196603, 589832, 2, -262149, 589832, 2, -327685, 589832, 2, -393221, 589832, 2, -393220, 589832, 2, -393219, 589832, 2, -393218, 589832, 2, -393217, 589832, 2, -458752, 589832, 2, -458751, 589832, 2, -458750, 589832, 2, -458749, 589832, 2, -458748, 589832, 2, -458747, 589832, 2, -458746, 589832, 2, -458745, 589832, 2, -458744, 589832, 2, -458743, 589832, 2, -458742, 589832, 2, -458741, 589832, 2, -393205, 589832, 2, -393204, 589832, 2, -393203, 589832, 2, -393202, 589832, 2, -393201, 589832, 2, -458737, 589832, 2, -458736, 589832, 2, -524272, 589832, 2, -524273, 589832, 2, -458738, 589832, 2, -458739, 589832, 2, -458740, 589832, 2, -393200, 589832, 2, -327664, 589832, 2, -327665, 589832, 2, -327666, 589832, 2, -327667, 589832, 2, -327668, 589832, 2, -393206, 589832, 2, -393207, 589832, 2, -393208, 589832, 2, -393209, 589832, 2, -393210, 589832, 2, -393211, 589832, 2, -393212, 589832, 2, -393213, 589832, 2, -393214, 589832, 2, -393215, 589832, 2, -393216, 589832, 2, -327681, 589832, 2, -327682, 589832, 2, -327683, 589832, 2, -327684, 589832, 2, -262148, 589832, 2, -262147, 589832, 2, -262145, 589832, 2, -327680, 589832, 2, -327679, 589832, 2, -327678, 589832, 2, -327677, 589832, 2, -327676, 589832, 2, -327675, 589832, 2, -327674, 589832, 2, -327673, 589832, 2, -327672, 589832, 2, -327671, 589832, 2, -327670, 589832, 2, -327669, 589832, 2, -262146, 589832, 2, -458735, 589832, 2, -393199, 589832, 2, -327663, 589832, 2, -262126, 589832, 2, -196590, 589832, 2, -131054, 589832, 2, -131055, 589832, 2, -65519, 589832, 2, 17, 589832, 2, 65553, 589832, 2, 131089, 589832, 2, 196625, 589832, 2, 262161, 589832, 2, 327697, 589832, 2, 393233, 589832, 2, 393232, 589832, 2, 458768, 589832, 2, -262127, 589832, 2, -196591, 589832, 2, -196592, 589832, 2, -262128, 589832, 2, -131056, 589832, 2, -65520, 589832, 2, -65521, 589832, 2, -131057, 589832, 2, -196593, 589832, 2, -262129, 589832, 2, 15, 589832, 2, 65551, 589832, 2, 131087, 589832, 2, 16, 589832, 2, 65552, 589832, 2, 131088, 589832, 2, 196624, 589832, 2, 262160, 589832, 2, 327696, 589832, 2, 262159, 589832, 2, 196623, 589832, 2, 393231, 589832, 2, 327695, 589832, 2, 458767, 589832, 2, 589819, 589832, 2, 655355, 589832, 2, 720891, 589832, 2, 720892, 589832, 2, 720893, 589832, 2, 720894, 589832, 2, 720895, 589832, 2, 655360, 589832, 2, 655361, 589832, 2, 655362, 589832, 2, 655363, 589832, 2, 655364, 589832, 2, 655365, 589832, 2, 655366, 589832, 2, 655367, 589832, 2, 655368, 589832, 2, 655369, 589832, 2, 655370, 589832, 2, 655371, 589832, 2, 655372, 589832, 2, 655373, 589832, 2, 655374, 589832, 2, 655375, 589832, 2, 655376, 589832, 2, 655377, 589832, 2, 589841, 589832, 2, 524305, 589832, 2, 458769, 589832, 2, 524304, 589832, 2, 524303, 589832, 2, 524302, 589832, 2, 524301, 589832, 2, 524300, 589832, 2, 524299, 589832, 2, 524298, 589832, 2, 524297, 589832, 2, 524296, 589832, 2, 524295, 589832, 2, 524294, 589832, 2, 524293, 589832, 2, 524292, 589832, 2, 524291, 589832, 2, 524290, 589832, 2, 524289, 589832, 2, 524288, 589832, 2, 589823, 589832, 2, 589822, 589832, 2, 589821, 589832, 2, 589820, 589832, 2, 655356, 589832, 2, 655357, 589832, 2, 655358, 589832, 2, 655359, 589832, 2, 589824, 589832, 2, 589825, 589832, 2, 589826, 589832, 2, 589827, 589832, 2, 589828, 589832, 2, 589829, 589832, 2, 589830, 589832, 2, 589831, 589832, 2, 589832, 589832, 2, 589833, 589832, 2, 589834, 589832, 2, 589835, 589832, 2, 589836, 589832, 2, 589837, 589832, 2, 589838, 589832, 2, 589839, 589832, 2, 589840, 589832, 2)

[node name="Kitdy" parent="." instance=ExtResource("3")]
position = Vector2(471, 397)

[node name="JK" parent="." instance=ExtResource("4")]
position = Vector2(495, 77)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hearts_container" parent="CanvasLayer" instance=ExtResource("5")]
offset_right = 200.0

[node name="pause" type="Button" parent="CanvasLayer"]
offset_left = 1236.0
offset_top = 9.0
offset_right = 1272.0
offset_bottom = 43.0
theme_override_styles/hover = SubResource("StyleBoxTexture_3ntyy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3ntyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_3ntyy")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 667.0
offset_right = 757.0
offset_bottom = 713.875
theme_override_font_sizes/font_size = 50
text = "HOLD SHIFT WHILE MOVING TO RUN"

[node name="pause_menu" parent="." instance=ExtResource("7")]
visible = false

[connection signal="pressed" from="CanvasLayer/pause" to="." method="_on_pause_pressed"]
